完成功能调试
